# Hackathon-II-Evolution-of-Todo

history/prompts/general/: 1-push-local-repository-to-github.general.prompt.md  2-add-and-push-files-after-deletion.general.prompt.md
phase 2 of Hackathon 2 Evolution of todo/.claude/agents/: api‑auditor.md
phase 2 of Hackathon 2 Evolution of todo/.specify/memory/: constitution.md
phase 2 of Hackathon 2 Evolution of todo/backend/: README.md  pyproject.toml  requirements.txt
phase 2 of Hackathon 2 Evolution of todo/frontend/: TODO_AUTH.md  drizzle.config.ts  package-lock.json  package.json
phase 2 of Hackathon 2 Evolution of todo/frontend/drizzle/: 0000_yielding_skaar.sql  0001_mysterious_sinister_six.sql
phase 2 of Hackathon 2 Evolution of todo/frontend/scripts/: create-tables.ts
phase 2 of Hackathon 2 Evolution of todo/frontend/src/: auth.ts  proxy.ts
phase 2 of Hackathon 2 Evolution of todo/specs/001-frontend-app/: plan.md  spec.md  tasks.md
phase 2 of Hackathon 2 Evolution of todo/specs/002-todo-dashboard-enhancement/: plan.md  spec.md  tasks.md
phase 2 of Hackathon 2 Evolution of todo/specs/003-home-todo/: plan.md  tasks.md
phase 2 of Hackathon 2 Evolution of todo/specs/004-backend-fastapi/: plan.md
phase 2 of Hackathon 2 Evolution of todo/specs/006-handle-ids/: plan.md
phase-1/: pyproject.toml  todo.py
phase-1 of Hackathon 2 Evolution of todo/: README.md  main.py
phase-1/specs/001-uv-environment-setup/: spec.md
phase-2/backend/: main.py  pyproject.toml
phase-2/frontend/: ANIMATIONS_TODO.md  package-lock.json  package.json
(+137 files in other folders)
