[project]
name = "fastsapi-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.27",
]
